Changelog
=========

4.16-dev - (unreleased)
-----------------------
 * Bug fix: fixed error in RSS on locations where syndication is not allowed
   [tiberich #4947]
 * Upgrade step: go to /portal_setup > import steps and reimport EEAContentTypes
   Action Providers steps which adds the crop action 
 * Feature: Changed GIS Application to be disk based product instead of TTW type [tiberich #4467]
 * Feature: added arcgis_id field to GIS Application [tiberich #4467]
 * Upgrade step: go to /prefs_install_products_form and upgrade EEAContentTypes to version 4.16

4.15 - (2012-02-06)
-------------------
 * Change: disabled crop functionality until it is better tested to ensure 
   that no issues would arrive from using it [ichimdav]

4.14 - (2012-02-06)
-------------------
 * Feature: added 16:9 crop functionality for IExternalHighlight contentTypes
   [ichimdav #4816]
 * Bug fix: fixed rss feed for at topics [tiberich #4992]
 * Bug fix: Fixed location field and widget on Event content types
   [ghicaale #4913]
 * Bug fix: Fixed iCal export for Event content types
   [ghicaale #4913]
 * Bug fix: Fixed Google geocoding used on Event and QuickEvent content types
   [ghicaale #4913]
 * Bug fix: Fixed geocoding subscriber to be active only for Event and QuickEvent content types
   [ghicaale #4913]
 * Bug fix: show body text on events [demarant #4906]
 * Feature: Enabled the EEA relation widget on highlights types [demarant #4705]
 * Change: Made field visibilityLevel hidden by default and visible only
           for articles where we use it for frontpage feature article. [demarant]
 * Bug fix: Fixed Content-Disposition for PDF files [voineali #4898]
 * Bug fix: fixed overlapping text in organisational chart and
            replaced deprecated css_slot with style_slot [demarant]
 * Change: Mark any Daviz presentation with Interactive Data interface. [demarant]
 * Bug fix: replaced attribute modifiedDate (introduced in r24888 and not found